# projetos-projeto-pi

./: .env  .gitignore  conceito.json  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
conceito/: admin.py  apps.py  models.py  serializers.py  views.py
conceito/migrations/: 0001_initial.py  0002_compra_alter_camiseta_marca_bone.py  0003_bone_cor_bone_nome_camiseta_nome_alter_bone_valor_and_more.py  0004_alter_bone_nome.py  0005_delete_bone.py  0006_camiseta_foto.py  0007_remove_camiseta_foto_camiseta_capa.py
config/: settings.py  urls.py
media/images/: 9554bb3c-57ee-461b-923b-218a4ecad13c  963e2330-f12c-4927-9a8d-9b5308927a3d  a08fd4b6-66f8-4a52-aa20-2de25c9dcf78  f4313311-e5a8-4321-ad0b-195ddd38f629
uploader/migrations/: 0001_initial.py
