
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "CarlosEduardoCardozo", email = "CarlosEduardoCardozo"},
]
dependencies = [
    "django>=4.2.5",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.0",
    "setuptools>=68.2.0",
    "gunicorn>=21.2.0",
    "whitenoise[brotli]>=6.5.0",
    "python-dotenv>=1.0.0",
    "python-magic>=0.4.27",
    "Pillow>=10.0.1",
    "psycopg2-binary>=2.9.9",
    "django-cloudinary-storage>=0.3.0",
    "netifaces>=0.11.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
]

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"

[tool.pdm.scripts]
pre_dev = "python ./scripts/set_my_ip.py"
dev = "python manage.py runserver 0.0.0.0:19003"
